fix: fixed 4 bugs - sticky footer, organisms ctructured, stretched all widths, logo dont shrink

--- a/src/components/organisms/Footer/Footer.scss
+++ b/src/components/organisms/Footer/Footer.scss
@@ -3,12 +3,15 @@
 @use '../../../styles/utils/mixins' as mix;
 
 .footer {
+  position: fixed;
+  bottom: 0;
   display: flex;
   flex-direction: column;
   gap: 32px;
   align-items: center;
   justify-content: space-between;
-  width: 320px;
+  width: 100%;
+  min-width: 320px;
   height: 257px;
   padding: 32px 16px;
   background-color: var.$color-white;
@@ -19,6 +22,10 @@
     width: 100%;
     height: 96px;
     padding: 32px 152px;
+  }
+
+  &__logo {
+    flex-shrink: 0;
   }
 
   &__list {
@@ -40,7 +47,7 @@
 
     a {
       color: var.$color-secondary;
-      text-decoration: none !important;
+      text-decoration: none;
 
       &:hover {
         text-decoration: underline;
